Fix the media query for better responsive on mobile screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -103,6 +103,6 @@ select {
   }
 
   .quizAnswer {
-    width: fit-content;
+    width: 300px;
   }
 }
